# guitar-tuner

./: .gitignore  .mise.toml  .oxlintrc.json  .prettierrc.js  AGENTS.md  README.md  README_JP.md  TODO.md  UPDATER_DEV_GUIDE.md  eslint.config.mjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: bump-version.yml  node-check.yml  release.yml  rust-check.yml
docs/: UPDATER_DEV_GUIDE.md
examples/updater-test/: README.md  latest.json
scripts/: bump-version.mjs
src/: App.vue  i18n.d.ts  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/src/: commands.rs  constants.rs  lib.rs
src-tauri/src/audio/: device.rs  mod.rs  stream.rs
src-tauri/src/dsp/: analyzer.rs  frequency.rs  mod.rs  window.rs
src/components/: CentDisplay.vue  ChannelSelector.vue  DeviceSelector.vue  LevelMeter.vue  NoteDisplay.vue  PitchSettings.vue  RawFrequencyDisplay.vue  StringReference.vue  ThresholdSlider.vue  TunerMeter.vue  UpdateNotification.vue  index.ts
src/composables/: constants.ts  index.ts  useAudioDevice.ts  useNoteInfo.ts
src/i18n/: index.ts  schema.ts
src/i18n/locales/: en.json  ja.json
src/types/: index.ts
tokens/: colors.css
